--- a/front/web/manifest.json
+++ b/front/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "front",
-    "short_name": "front",
+    "name": "my_flutter_app",
+    "short_name": "my_flutter_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
