detail_list_front

--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/images/black_mypage.png
     - assets/images/coin.png
     - assets/images/film2.png
+    - assets/images/investment_banner.png
 
   fonts:
     - family: Pretendard
